@@ -122,6 +122,8 @@ public:
 	bool m_fErase;		// set after the ball has been drawn for the first time
 
 	bool fFrozen;
+
+	bool m_disableLighting;
    
     static int ballsInUse;
 };
